--- a/app/index.html
+++ b/app/index.html
@@ -1,55 +1,218 @@
-<!DOCTYPE html>
-<html lang="ru">
+<!DOCTYPE HTML>
+<html>
 
 <head>
 
-	<meta charset="utf-8">
+  <meta charset="utf-8">
 
-	<title>Project 1</title>
-	<meta name="description" content="">
+  <title>Footwear</title>
+  <meta name="description" content="">
 
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-	<meta property="og:image" content="path/to/image.jpg">
-	<link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
-	<link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">
+  <meta property="og:image" content="path/to/image.jpg">
+  <link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">
 
-	<!-- Chrome, Firefox OS and Opera -->
-	<meta name="theme-color" content="#000">
-	<!-- Windows Phone -->
-	<meta name="msapplication-navbutton-color" content="#000">
-	<!-- iOS Safari -->
-	<meta name="apple-mobile-web-app-status-bar-style" content="#000">
+  <!-- Chrome, Firefox OS and Opera -->
+  <meta name="theme-color" content="#000">
+  <!-- Windows Phone -->
+  <meta name="msapplication-navbutton-color" content="#000">
+  <!-- iOS Safari -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="#000">
 
-	<link rel="stylesheet" href="css/main.min.css">
+  <link rel="stylesheet" href="css/main.min.css">
 
 </head>
 
 <body>
+  <div class="navigation">
+    <div class="container-content">
+      <div class="navigation-content">
+        <div class="navigation-content-left">
+          <div id="label"></div>
+          <ul class="menu">
+            <li><a href="#">footwear</a></li>
+            <li><a href="#">clothing</a></li>
+            <li><a href="#">accessories</a></li>
+            <li><a href="#">brands</a></li>
+            <li><a href="#">exlusive</a></li>
+          </ul>
+        </div>
+        <div class="navigation-content-right">
+          <!-- <div class="search">search</div> -->
+          <form>
+            <input type="text" placeholder="Искать здесь...">
+            <button type="submit"></button>
+          </form>
+          <div id="shopping-cart-button">cart&nbsp;(2)</div>
+          <!--<div id="shopping-cart">
+            <div class="title">Shopping Bag</div>
 
-	<div class="container">
+            <div class="item">
+              <div class="buttons">
+                <span class="delete-btn"></span>
+                <span class="like-btn"></span>
+              </div>
+              <div class="image-product"></div>
+              <div class="description-cart">
+                <span>Common Projects</span>
+                <span>Bball High</span>
+                <span>White</span>
+              </div>
+              <div class="quantity">
+                <button class="minus-btn" type="button" name="button"></button>
+                <input type="text" name="name" value="1">
+                <button class="plus-btn" type="button" name="button"></button>
+              </div>
+              <div class="total-price">$549</div>
+            </div>
 
-		<div class="row">
+            <div class="item">
+              <div class="buttons">
+                <span class="delete-btn"></span>
+                <span class="like-btn"></span>
+              </div>
+              <div class="image-product"></div>
+              <div class="description-cart">
+                <span>Common Projects</span>
+                <span>Bball</span>
+                <span>White</span>
+              </div>
+              <div class="quantity">
+                <button class="minus-btn" type="button" name="button"></button>
+                <input type="text" name="name" value="1">
+                <button class="plus-btn" type="button" name="button"></button>
+              </div>
+              <div class="total-price">$800</div>
+            </div>
+          </div>-->
+          <div class="sing">sing&nbsp;in</div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-			<div class="col-sm-8 col-sm-offset-2">
-				<div class="content">
+  <div class="footwear-main">
+    <div class="container-content">
+      <div class="footwear-main-content">
+        <div class="footwear-image-content"></div>
+        <div class="footwear-product-content">
+          <div class="product-like"></div>
+          <div class="product-name">
+            <div class="product-name-nike">nike</div>
+            <div class="product-name-air">air max tavas sd</div>
+          </div>
+          <div class="product-price">$ 160.00</div>
+          <div class="product-colors">colors-<span>black/pink pow/tour yellow/white</span></div>
+          <div class="product-color-selection-image">
+            <div class="color-selection-image"></div>
+            <div class="gray-seliction-image"></div>
+          </div>
+          <div class="product-size">Size charts</div>
+          <div class="product-size-charts">
+            <select class="product-size-selection">
+              <option value="#">39</option>
+              <option value="#">40</option>
+              <option value="#">41</option>
+              <option value="#">42</option>
+              <option value="#">43</option>
+            </select>
+            <div class="product-cart">add to cart</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-				</div>
-				<img class="img-responsive" src="img/preview.jpg" alt="Start HTML5 Template">
-				<p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Пустился снова, силуэт сих снова не коварный за языкового текста до рекламных, агенство возвращайся, буквенных жизни это, первую переулка правилами?</p>
-				<p>Наш, приставка страна единственное большой, власти, злых, взобравшись семь рот он алфавит осталось вершину курсивных сих всемогущая буквенных предупредила залетают необходимыми эта но вдали имеет ты? Предупреждал повстречался, но которое!</p>
-				<p>Злых, знаках свою. Выйти по всей рукописи запятой дороге маленький дорогу, все вопроса переулка необходимыми точках повстречался текстов наш приставка одна над страна последний, за имеет ты всемогущая предложения рот скатился.</p>
+  <div class="description">
+    <div class="container-content">
+      <div class="description-content">
+        <div class="description-information-content">
+          <div class="description-information-title">classic cushioning. modern comfort.</div>
+          <div class="description-information-text">The Nike Air Max Tavas SD Men's
+            Shoe recalls the profile of the iconic running original with a Max Air unit in the heel and multi-surface Waffle outsole.
+            A lightweight upper and gradient detail offer a comfortable fit and dynamic look.</div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-			</div>
+  <div class="product-description">
+    <div class="container-content">
+      <div class="product-story-description-content">
+        <div class="product-story-content">
+          <div class="story-content">
+            <div class="product-story-title-content">story</div>
+            <div class="product-story-name-content">nike air max origins</div>
+            <div class="product-story-text-content">Nike's revolutionary Air-Sole unit made its way into
+              Nike footwear in the late '70s. In 1987, the Nike Air Max 1 debuted
+              with visible air in its heel, allowing fans more than just the feel of Air-Sole comfort:</div>
+          </div>
+          <div class="benefits-content">
+            <div class="product-benefits-content">benefits</div>
+            <div class="product-benefits-texttile-content">Layered textile/synthetic upper</div>
+            <div class="product-benefits-texttile-text-content">for lightweight durability and comfort </div>
+            <div class="product-benefits-Injected-content">Injected Phylon midsole doubles </div>
+            <div class="product-benefits-injected-text-content">Outsole to reduce the overall weight of the shoe </div>
+            <div class="product-benefits-color-content">Max Air heel unit </div>
+            <div class="product-benefits-color-text-content">delivers maximum lightweight cushioning </div>
+            <div class="product-benefits-rubber-content">Rubber Waffle outsole </div>
+            <div class="product-benefits-rubber-text-content">Durable, multi-surface traction</div>
+          </div>
+        </div>
+        <div class="product-description-content">
+          <div class="product-description-name-nike">nike</div>
+          <div class="product-description-name-air">Air max Tavas SD</div>
+          <div class="product-description-colors">black/pink pow/tour yellow/white</div>
+          <div class="product-description-image"></div>
+          <div class="product-description-quantity-price">
+            <div class="product-description-quantity">en stock</div>
+            <div clasas="product-description-price">$ 160.00</div>
+          </div>
+          <div class="product-description-charts">
+            <select class="product-description-selection">
+              <option value="#">39</option>
+              <option value="#">40</option>
+              <option value="#">41</option>
+              <option value="#">42</option>
+              <option value="#">43</option>
+            </select>
+            <div class="product-description-cart">add to cart</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-		</div>
-
-	</div>
-
-	<script src="js/scripts.min.js"></script>
-
+  <div class="footwear-social">
+    <div class="container-content">
+      <div class="footwear-social-content">
+        <div class="social-nikeairmax-content">
+          <div class="social-content">social</div>
+          <a href="#nikeairmax">#nakeairmax</a>
+        </div>
+        <div class="images-container">
+          <div class="image-container">
+            <div class="models-image"></div>
+          </div>
+          <div class="image-container">
+            <div class="models-image"></div>
+          </div>
+          <div class="image-container">
+            <div class="models-image"></div>
+          </div>
+          <div class="image-container">
+            <div class="models-image"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="js/scripts.min.js"></script>
 </body>
+
 </html>
