--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,6 @@
   <link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
   <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png">
   <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">
-  <link rel="stylesheet" href="path/to/nice-select.css">
 
   <!-- Chrome, Firefox OS and Opera -->
   <meta name="theme-color" content="#000">
@@ -25,6 +24,7 @@
   <!-- iOS Safari -->
   <meta name="apple-mobile-web-app-status-bar-style" content="#000">
 
+  <link rel="stylesheet" href="libs/nice-select/nice-select.css">
   <link rel="stylesheet" href="css/main.min.css">
 
 </head>
@@ -213,9 +213,8 @@
       </div>
     </div>
   </div>
-  <script src="js/scripts.min.js"></script>
-  <script src="path/to/jquery.js"></script>
-  <script src="path/to/jquery.nice-select.js"></script>
-</body>
 
+  <script src="js/scripts.min.js"></script>
+
+</body>
 </html>
