--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,7 @@
           <div id="search">search</div>
           <div id="shopping-cart-button">cart&nbsp;(2)</div>
           <div id="sing">sing&nbsp;in</div>
+          <div id="menu-button"></div>
         </div>
       </div>
     </div>
@@ -131,7 +132,7 @@
             <div class="product-description-price">$ 160.00</div>
           </div>
           <div class="product-description-charts">
-            <select id="product-size-selection">
+            <select id="product-description-size-selection">
               <option data-display="size"></option>
               <option value="#">39</option>
               <option value="#">40</option>
@@ -180,17 +181,18 @@
         <li><a href="#">brands</a></li>
         <li><a href="#">exlusive</a></li>
       </ul>
+      <div id="navigation-close"></div>
     </div>
   </div>
 
-  <!--<div class="search-on">
+  <div id="search-on">
     <div class="container-content">
       <div class="search-on-content">
         <div class="search-on-title-content">
           <div class="search-title">search on bree
             <div class="start">Start typing</div>
           </div>
-          <div class="search-close-button"></div>
+          <div id="search-close-button"></div>
         </div>
         <form>
           <div class="search-on-button">
@@ -200,9 +202,9 @@
         </form>
       </div>
     </div>
-  </div>-->
+  </div>
 
-  <!--<div class="information">
+  <div id="information">
     <div class="container-content">
       <div class="information-cart-content">
         <div class="information-content">
@@ -294,11 +296,12 @@
             </div>
           </div>
         </div>
+        <div id="information-close"></div>
       </div>
     </div>
-  </div>-->
+  </div>
 
-  <!--<div class="sing-in">
+  <div id="sing-in">
     <div class="container-content">
       <div class="sing-in-container">
         <form id="slick-login">
@@ -306,9 +309,10 @@
           <label for="password">Password:</label><input type="password" name="password" class="placeholder" placeholder="Enter password">
           <input type="submit" value="Come in">
         </form>
+        <div id="sing-in-close"></div>
       </div>
     </div>
-  </div>-->
+  </div>
 
 
   <script src="js/scripts.min.js"></script>
