--- a/app/index.html
+++ b/app/index.html
@@ -181,7 +181,6 @@
         <li><a href="#">brands</a></li>
         <li><a href="#">exlusive</a></li>
       </ul>
-      <div id="navigation-close"></div>
     </div>
   </div>
 
@@ -200,6 +199,45 @@
             <input type="search">
           </div>
         </form>
+        <div class="footwear-title">footwear(3)</div>
+        <div class="footwear-models-images">
+          <div class="footwear-model">
+            <div class="footwear-model-image">
+              <div class="footwear-model-information">
+                <div class="footwear-model-name">raf simons x adidas</div>
+                <div class="footwear-model-description">Mid-Platform Light-Up</div>
+                <div class="footwear-model-price">$760.00</div>
+              </div>
+            </div>
+          </div>
+          <div class="footwear-model">
+            <div class="footwear-model-image">
+              <div class="footwear-model-information">
+                <div class="footwear-model-name">raf simons x adidas</div>
+                <div class="footwear-model-description">Stan smith classic</div>
+                <div class="footwear-model-price">$300.00</div>
+              </div>
+            </div>
+          </div>
+          <div class="footwear-model">
+            <div class="footwear-model-image">
+              <div class="footwear-model-information">
+                <div class="footwear-model-name">raf simons</div>
+                <div class="footwear-model-description">Hi top velcro straps</div>
+                <div class="footwear-model-price">$788.00</div>
+              </div>
+            </div>
+          </div>
+          <div class="footwear-model">
+            <div class="footwear-model-image">
+              <div class="footwear-model-information">
+                <div class="footwear-model-name">raf simons</div>
+                <div class="footwear-model-description">Hi top velcro straps</div>
+                <div class="footwear-model-price">$788.00</div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -211,6 +249,7 @@
           <div class="information-title">informations</div>
           <div class="personnal">personnal informations</div>
           <select id="country">
+            <option data-display="country"></option>
             <option value="#">England</option>
             <option value="#">France</option>
             <option value="#">Germany</option>
@@ -229,7 +268,8 @@
           <div class="note">Notes</div>
           <input type="note" placeholder="Note">
           <div class="delivery">delivery mode</div>
-          <select class="delivers-mode">
+          <select id="delivers-mode">
+            <option data-display="price"></option>
             <option value="#">Collisimo France,$20.00</option>
             <option value="#">Collisimo England,$25.00</option>
             <option value="#">Collisimo Germany,$30.00</option>
@@ -281,7 +321,7 @@
           <div class="last-informations">
             <div class="consent-container">
               <div class="consent-block"></div>
-              <div class="consent">I agree <span>terms of use and privacy</span></div>
+              <div class="consent">I agree <a href="">terms of use and privacy</a></div>
             </div>
             <div class="total-button-container">
               <div class="shipping-container">
