Change cart-information css

--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
           <div id="search">search</div>
           <div id="shopping-cart-button">cart&nbsp;(2)</div>
           <div id="sing">sing&nbsp;in</div>
-          <div id="menu-button"></div>
+          <div class="menu-button"></div>
         </div>
       </div>
     </div>
