Change index and sass

--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
   <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png">
   <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">
 
+
   <!-- Chrome, Firefox OS and Opera -->
   <meta name="theme-color" content="#000">
   <!-- Windows Phone -->
@@ -56,7 +57,7 @@
   <div class="footwear-main">
     <div class="container-content">
       <div class="footwear-main-content">
-        <img src="../img/footwear.jpg" alt="footwear">
+        <img src="../img/footwear.png" alt="footwear">
         <div class="footwear-product-content">
           <div class="product-like"></div>
           <div class="product-name">
