Change cart and add animate

--- a/app/index.html
+++ b/app/index.html
@@ -37,11 +37,11 @@
         <div class="navigation-content-left">
           <div id="label" class="label"></div>
           <ul class="menu">
-            <li><a href="#">footwear</a></li>
-            <li><a href="#">clothing</a></li>
-            <li><a href="#">accessories</a></li>
-            <li><a href="#">brands</a></li>
-            <li><a href="#">exlusive</a></li>
+            <li><a href="#footwear-main">footwear</a></li>
+            <li><a href="#description">clothing</a></li>
+            <li><a href="#product-description">accessories</a></li>
+            <li><a href="#footwear-social">brands</a></li>
+            <li><a href="#footwear-main">exlusive</a></li>
           </ul>
         </div>
         <div class="navigation-content-right">
@@ -54,7 +54,7 @@
     </div>
   </div>
 
-  <div class="footwear-main">
+  <div id="footwear-main">
     <div class="container-content">
       <div class="footwear-main-content">
         <img src="../img/footwear.png" alt="footwear">
@@ -87,7 +87,7 @@
     </div>
   </div>
 
-  <div class="description">
+  <div id="description">
     <div class="container-content">
       <div class="description-content">
         <div class="description-information-content">
@@ -100,7 +100,7 @@
     </div>
   </div>
 
-  <div class="product-description">
+  <div id="product-description">
     <div class="container-content">
       <div class="product-story-description-content">
         <div class="product-story-content">
@@ -148,7 +148,7 @@
     </div>
   </div>
 
-  <div class="footwear-social">
+  <div id="footwear-social">
     <div class="container-content">
       <div class="footwear-social-content">
         <div class="social-nikeairmax-content">
@@ -176,11 +176,11 @@
   <div id="navigation-menu-container">
     <div class="container-content">
       <ul class="navigation-menu">
-        <li><a href="#">footwear</a></li>
-        <li><a href="#">clothing</a></li>
-        <li><a href="#">accessories</a></li>
-        <li><a href="#">brands</a></li>
-        <li><a href="#">exlusive</a></li>
+        <li><a href="#footwear-main">footwear</a></li>
+        <li><a href="#description">clothing</a></li>
+        <li><a href="#product-description">accessories</a></li>
+        <li><a href="#footwear-social">brands</a></li>
+        <li><a href="#footwear-main">exlusive</a></li>
       </ul>
     </div>
   </div>
